Bug 256820 - netinet6: etherip over ipv6 doesn't work
Summary: netinet6: etherip over ipv6 doesn't work
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: Unspecified
Hardware: Any Any
: --- Affects Many People
Assignee: Hiroki Sato
URL:
Keywords: ipv6
: 263831 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-06-25 03:43 UTC by Masahiro Kozuka
Modified: 2023-09-12 16:19 UTC (History)
11 users (show)

See Also:
meta: mfc-stable13+
meta: mfc-stable12+
koobs: mfc-stable11?


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Masahiro Kozuka 2021-06-25 03:43:20 UTC
I've found that encap6_input() is not registered for IPPROTO_ETHERIP and that bridge(4) and gif(4) will not work over an IPv6-IPv6 tunnel. So, I've tried to add below code and found that etherip over ipv6 will work after this fix.

https://github.com/masa-koz/freebsd-src/commit/9ccd2d8b3357bd257bed54c674ee22144e949587
Comment 1 Hiroki Sato freebsd_committer 2021-06-25 04:22:50 UTC
Take.
Comment 2 commit-hook freebsd_committer 2021-08-27 08:15:44 UTC
A commit in branch main references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=9823a0c0acf4fc277a71336ea737e1de7c65742f

commit 9823a0c0acf4fc277a71336ea737e1de7c65742f
Author:     Hiroki Sato <hrs@FreeBSD.org>
AuthorDate: 2021-08-27 08:14:35 +0000
Commit:     Hiroki Sato <hrs@FreeBSD.org>
CommitDate: 2021-08-27 08:14:35 +0000

    inet6(4): add a missing IPPROTO_ETHERIP entry

    bridge(4) + gif(4) did not work when the outer protocol was IPv6.

    Submitted by:   Masahiro Kozuka
    PR:             256820
    MFC after:      3 days

 sys/netinet6/in6_proto.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Comment 3 Hiroki Sato freebsd_committer 2021-08-27 08:19:36 UTC
This will be merged into stable branches.
Comment 4 Michael Tuexen freebsd_committer 2022-05-07 08:12:53 UTC
(In reply to Hiroki Sato from comment #3)
Still any plan to do it?
Comment 5 Koichiro Iwao freebsd_committer 2022-08-23 07:46:58 UTC
What can I help to ship this to 13.2, 14.0?
Comment 6 commit-hook freebsd_committer 2022-10-19 03:25:15 UTC
A commit in branch stable/13 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=3b1dbf19f9c051a325774ba5c0d7cc460cc82c7f

commit 3b1dbf19f9c051a325774ba5c0d7cc460cc82c7f
Author:     Hiroki Sato <hrs@FreeBSD.org>
AuthorDate: 2021-08-27 08:14:35 +0000
Commit:     Koichiro Iwao <meta@FreeBSD.org>
CommitDate: 2022-10-19 03:23:16 +0000

    inet6(4): add a missing IPPROTO_ETHERIP entry

    bridge(4) + gif(4) did not work when the outer protocol was IPv6.

    Submitted by:   Masahiro Kozuka
    PR:             256820

    Approved by:    hps (to cherry-pick)

    (cherry picked from commit 9823a0c0acf4fc277a71336ea737e1de7c65742f)

 sys/netinet6/in6_proto.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Comment 7 commit-hook freebsd_committer 2022-10-19 03:31:18 UTC
A commit in branch stable/12 references this bug:

URL: https://cgit.FreeBSD.org/src/commit/?id=a0e9703f57cb2ba2bcf8a765f42f8fe702a3cca8

commit a0e9703f57cb2ba2bcf8a765f42f8fe702a3cca8
Author:     Hiroki Sato <hrs@FreeBSD.org>
AuthorDate: 2021-08-27 08:14:35 +0000
Commit:     Koichiro Iwao <meta@FreeBSD.org>
CommitDate: 2022-10-19 03:29:39 +0000

    inet6(4): add a missing IPPROTO_ETHERIP entry

    bridge(4) + gif(4) did not work when the outer protocol was IPv6.

    Submitted by:   Masahiro Kozuka
    PR:             256820

    Approved by:    hps (to cherry-pick)

    (cherry picked from commit 9823a0c0acf4fc277a71336ea737e1de7c65742f)

 sys/netinet6/in6_proto.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Comment 8 Koichiro Iwao freebsd_committer 2022-10-20 09:54:13 UTC
MFC'd into stable/13 and stable/12. Thanks hps for the help!

BTW, what about stable/11? AFAIK, stable/11 branch is not EoL'ed yet.
However, 11.4 is EoL and 11.5 will probably never be released so I
personally have less motivation to MFC it into stable/11 branch.


May I close this now? Or should I close after MFC into stable/11?
Comment 9 Koichiro Iwao freebsd_committer 2023-06-19 02:31:33 UTC
Merged into all currently supported branches, closing.
Comment 10 Xin LI freebsd_committer 2023-09-12 16:19:15 UTC
*** Bug 263831 has been marked as a duplicate of this bug. ***