inet6(4): add a missing IPPROTO_ETHERIP entry

bridge(4) + gif(4) did not work when the outer protocol was IPv6.

Submitted by:	Masahiro Kozuka
PR:		256820

Approved by:	hps (to cherry-pick)

(cherry picked from commit 9823a0c0acf4fc277a71336ea737e1de7c65742f)